2016-10-06 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/: Revert removal of memsets libfreeipmi/fru/.
	Are necessary b/c fields are optional.
	
2016-10-04 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Audit and fix, add +1 to string buffers, use
	secure_memset when appropriate.

	* bmc-device/: Audit and fix, remove +1 for data buffers, don't
	memset when unnecessary.

	* bmc-info/bmc-info.c (display_system_info_common): Add +1 for string buffer.

	* bmc-info/bmcinfo.c (get_channel_info_list)
	(display_channel_info): Don't memset channel array, clear values
	if not available.

	* ipmi-dcmi/ipmi-dcmi.c: Audit and fix, +1 for string buffers, use
	char not uint8_t for strings.

	* ipmi-fru/: Audit and fix, no need to memset buffers, remove +1s
	length on buffers.

	* ipmi-sensors/: Audit and fix, remove unnecessary memset.

	* ipmiconsole/: Audit and remove unnecessary memsets.

	* ipmiseld/: Audit and remove unnecessary memsets, add +1 to
	string buffers.

	* ipmipower/: Audit, remove unnecessary memsets, add +1 to string
	buffers, minor cleanup.

	* libipmimonitoring/: Audit, remove unnecessary memsets, add +1 to
	string buffers.

	* libipmiconsole/: Audit, remove unnecessary memsets, add +1 to string buffers.

	* ipmi-config/: Audit, remove unnecessary memsets, add +1 to
	string buffers, minor fixes.

	* Properly memset hdr buffers when outputting debug output.

	* Remove unnecessary memset of "prog_data" in all tools.

	* libfreeipmi/: Audit, remove unnecessary memsets, add +1 to
	string buffers, misc fixes.

	* Fix logic and corner cases with parse_kg.

2016-10-03 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/ipmi-fru-data.c: Remove unnecessary memsets. 
	
2016-08-29 Albert Chu <chu11@llnl.gov>
	
	* ipmi-oem/: Add Gigabyte get/set-bmc-services commands.

2016-10-03 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan-conf-security-keys-section.c (k_g_checkout),
	ipmipower/ipmipower_prompt.c (_cmd_k_g): Fix memset of buffer to